# mlia-converters-pytorch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  hatch_build.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md
docs/source/: cli.md  conversion_flow.md  conversion_outputs.md  development.md  index.md  troubleshooting.md  usage.md
pre_commit_hooks/: check_copyright_header.py
src/mlia/_vendor/artifacts/tosa-tools/: .sha256
src/mlia/backend/: pytorch_export_converter.py  pytorch_export_input.py
src/mlia/backend/mlia_nn_module_to_pt2_exporter/: exporter.py  exporter_plugin.py
src/mlia/backend/mlia_pte_to_delegate_converter/: conversion.py  converter_plugin.py  install.py
src/mlia/backend/mlia_pytorch_to_pte_converter/: conversion.py  converter_plugin.py  install.py
src/mlia/backend/mlia_pytorch_to_tosa_converter/: conversion.py  converter_plugin.py  install.py
tests/: test_backend_mlia_nn_module_to_pt2_exporter.py  test_backend_mlia_pte_to_delegate_converter.py  test_backend_mlia_pte_to_delegate_converter_conversion.py  test_backend_mlia_pytorch_to_pte_converter.py  test_backend_mlia_pytorch_to_pte_converter_conversion.py  test_backend_mlia_pytorch_to_tosa_converter.py  test_backend_mlia_pytorch_to_tosa_converter_conversion.py
tests/fixtures/pte_to_delegate/: tosa_payload.b64  vgf_payload.hex
